--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -1,3 +1,4 @@
-api.base.url=https://the-social-playlist.herokuapp.com/
+api.base.url=http://192.168.0.104:3000/
+
 youtube.android.api.key=AIzaSyAi1aBsT5p3CwJriV7ytKmGuMAr3RAvVrc
 youtube.browser.api.key=AIzaSyAOCU_w8sJ4mboiEp6QR6hRdh2isbtJQLI
