--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:palette-v7:25.0.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
