Changes made to user Profile view, feed display, activity display etc. External apps can now share links to this app. Minor fixes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ android {
 
 repositories {
     mavenCentral()
+    maven { url "https://maven.google.com" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url 'https://github.com/leonardocardoso/mvn-repo/raw/master/maven-deploy' }
 }
 
 dependencies {
@@ -45,13 +47,13 @@ dependencies {
     compile('com.google.http-client:google-http-client-gson:1.21.0') {
         exclude module: 'httpclient'
     }
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.23.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:palette-v7:25.0.0'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
@@ -63,4 +65,7 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     apt 'com.google.dagger:dagger-compiler:2.5'
     provided 'javax.annotation:jsr250-api:1.0'
+
+    compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.leocardz:link-preview:1.2.2@aar'
 }
